--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ jobs:
     strategy:
       matrix:
         ruby:
-          - '3.1.2'
+          - '3.1'
+          - '3.2'
+          - head
 
     steps:
     - uses: actions/checkout@v3
