--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         ruby:
           - '3.1'
           - '3.2'
+          - '3.3'
           - head
 
     steps:
@@ -30,3 +31,5 @@ jobs:
         bundler-cache: true
     - name: Run build task
       run: bundle exec rake build
+    - name: check type
+      run: bundle exec steep check
